<resources>
    <string name="app_name">Moo</string>

    <string name="action_settings">Settings</string>
    <string name="exit_application">結束應用程式</string>
    <string name="sure_to_leave">確定要離開嗎？</string>
    <string name="please_input_account_password">請輸入帳號密碼</string>

    <string name="enter_account">請輸入帳號</string>
    <string name="enter_password">請輸入密碼</string>
    <string name="progress_title">Moo</string>
    <string name="login">登入</string>
    <string name="logining">登入中...</string>
    <string name="login_successfully">登入成功</string>
    <string name="login_failed">登入失敗！請檢查網路 和 帳號密碼</string>
    <string name="declare">發佈</string>
    <string name="declaring">發佈中...</string>
    <string name="declare_successfully">發佈成功</string>
    <string name="declare_failed">發佈失敗</string>
    <string name="enter_declaration">我想要宣示習慣...</string>
    <string name="enter_cost">如果沒做到，我要付出甚麼代價...</string>
    <string-array name="declare_period" >
        <item >週</item>
    </string-array>
    <string-array name="declare_daily_frequency" >
        <item>1</item>
    </string-array>
    <string-array name="declare_weekly_frequency" >
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="declare_do_it_time" >
        <item>AM 12:00</item>
        <item>AM 1:00</item>
        <item>AM 2:00</item>
        <item>AM 3:00</item>
        <item>AM 4:00</item>
        <item>AM 5:00</item>
        <item>AM 6:00</item>
        <item>AM 7:00</item>
        <item>AM 8:00</item>
        <item>AM 9:00</item>
        <item>AM 10:00</item>
        <item>AM 11:00</item>
        <item>PM 12:00</item>
        <item>PM 1:00</item>
        <item>PM 2:00</item>
        <item>PM 3:00</item>
        <item>PM 4:00</item>
        <item>PM 5:00</item>
        <item>PM 6:00</item>
        <item>PM 7:00</item>
        <item>PM 8:00</item>
        <item>PM 9:00</item>
        <item>PM 10:00</item>
        <item>PM 11:00</item>
    </string-array>
    <string name="confirm">確定</string>
    <string name="cancel">取消</string>
    <string name="invite_friend">邀請好友</string>
    <string name="searching_friends">搜尋好友中...</string>
    <string name="searching_groups">搜尋群組中...</string>
    <string name="searching_habiture">搜尋習慣中...</string>
    <string name="no_friend">無任何好友</string>
    <string name="no_group">無任何群組</string>
    <string name="no_habiture">無任何習慣</string>
    <string name="tool_clicck_intent_name">tool clicked broadcast intent</string>
    <string name="tool_sent_successful">使用工具傳送提醒!</string>
    <string name="tool_sent_failed">傳送提醒失敗!</string>
    <string name="declaration_do_it_time_hint">別人可於何時提醒我</string>
    <string name="play_tool_sound">play_tool_sound</string>
    <string name="return_register_id">return_register_id</string>
    <string name="progress_upgrade_app">取得版本資訊</string>
    <string name="habiture_alarm_key">habiture_alarm_key</string>

</resources>
