<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/login_page_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/loginSession"
        android:layout_weight="1"
        android:gravity="center">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"></LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="56dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:hint="@string/enter_account"
                android:id="@+id/etAccount"
                android:singleLine="true"
                android:ems="15"
                android:layout_marginBottom="8dp"
                android:maxLength="30"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:background="@drawable/backgroung_frame" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="textPassword"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:hint="@string/enter_password"
                android:id="@+id/etPassword"
                android:singleLine="true"
                android:ems="15"
                android:maxLength="30"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:gravity="center"
                android:background="@drawable/backgroung_frame" />

            <Button
                android:layout_width="112dp"
                android:layout_height="56dp"
                android:text="@string/login"
                android:id="@+id/btnLogin"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#ffffffff"
                android:singleLine="true"
                android:layout_marginTop="24dp"
                android:background="@drawable/backgroung_frame" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appVersionSession"
        android:gravity="bottom|end"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1.2.11915846"
            android:id="@+id/tvAppVersion" />
    </LinearLayout>

</LinearLayout>